<resources>
    <string name="app_name">Weather App</string>
    <string name="label_min_temp">Min Temp</string>
    <string name="label_max_temp">Max Temp</string>
    <string name="label_feels_like">Feels Like</string>
    <string name="label_created_by">Created By</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>
    <string name="label_wind">Wind</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_weather">Weather</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_clear_sky">Clear Sky</string>
    <string name="label_author">Syed</string>
    <string name="label_okay">Yes</string>
    <string name="label_no">No</string>
    <string name="message_missing_google_play">You need to install Google Play Services to use the App properly</string>
    <string name="msg_something_went_wrong">Something went wrong, please try again</string>
    <string name="msg_check_connectivity">You\'re device seems to be offline. Please check your internet connectivity</string>
    <string name="label_temp">%1$s °C</string>
    <string name="label_min_temp_format">Min Temp %1$.1f °C</string>
    <string name="label_max_temp_format">Max Temp %1$.1f °C</string>
    <string name="label_updated_at">Last updated %1$s</string>
    <string name="label_check_weather">Check Weather By</string>
    <string name="label_entering_manually">Entering Manually</string>
    <string name="label_by_location">GPS Location</string>

    <string name="msg_no_network">No network, please check your network</string>
    <string name="label_retry">Retry</string>
    <string name="message_enable_location">Turn on location</string>
    <string name="label_timezone_formatted">Timezone : %1$s</string>
    <string name="label_wind_speed_format">%1$.1f km/hr</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_hint">Enter min 3 city separate by , </string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="label_city_country">%1$s , %2$s</string>
</resources>
