<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. This class is only created by Syed & only means to used by Syed for Development & Testing Purpose. This class can be also used by other with proper permission. Any unauthorised used is strictly prohibited.
  ~ $used.year
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:srcCompat="@drawable/nointernet_connection" />

    <TextView
        android:id="@+id/tv_error_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgv_error"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_long"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/msg_something_went_wrong"
        android:textColor="@color/tv_txt_black"
        android:textSize="@dimen/txt_header"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv_error_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_head"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_short"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/msg_no_network"
        android:textColor="@color/tv_txt_grey_error"
        android:textSize="@dimen/txt_normal"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/btn_green_border"
        android:text="@string/label_retry"
        android:textColor="@color/brdr_green"
        android:textSize="@dimen/txt_normal" />

</RelativeLayout>