<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/addressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Delhi, IND"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20 April 2012, 20:08 PM"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/dp_4"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/overviewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="@string/label_clear_sky"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            tools:text="29 °C"
            android:textSize="@dimen/sp_60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                tools:text="Min Temp: 15:05 AM" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                tools:text="Max Temp: 08:05 PM" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/sunrise"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sunrise"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06:40 AM"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/feature_box_indigo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/sunset"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sunset"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06:40 AM"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/feature_box_indigo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/wind"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wind"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06:40 AM"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/feature_box_indigo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/pressure"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_pressure"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06:40 AM"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/feature_box_indigo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/humidity"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_humidity"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="06:40 AM"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <Space
                android:layout_width="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/feature_box_indigo"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <ImageView
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/info"
                    android:tint="@color/color_white" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_created_by"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_author"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>